2010-12-01  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16625: TCEforms have surrounding box with background color

2010-12-01  Oliver Hader  <oliver@typo3.org>

	* Updated Workspaces and Version extension to version 4.5.0beta2. See their ChangeLog for details.
	* Fixed bug #16604: Changes in workspace are not shown automatically in pagetree

2010-11-30  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #16501: DBAL does not support multi-column indexes in create table queries
	* Fixed bug #16491: Provide a pass-through flag for sql_exec() which goes directly to the native MySQL engine

2010-11-30  Tolleiv Nietsch  <typo3@tolleiv.de>

	* Fixed bug #5918: No language overlay with TS select on table pages (Thanks to Fabrizio Branca)

2010-11-30  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16608: Javascript flashmessage miss named severity
	* Fixed bug #16614: common.js resets TYPO3 namespace (Thanks to Peter Kühn)
	* Fixed bug #16443: FAL Hooks (Thanks to Mathias Schreiber)
	* Fixed bug #16459 Add uid of overlay record to rootline (Thanks to Mathias Schreiber)

2010-11-30  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16598: Login via OpenID is impossible (Thanks to Henrik Ziegenhain)
	* Fixed bug #16581: Make jsFooterInline & jsFooterLibs available to render-preProcess hook (Thanks to Morton Jonuschat)
	* Fixed bug #16623: Fix Tab styling (Thanks to Tomas Norre Mikkelsen)
	* Fixed bug #16624: Decrease opacity of black ExtJS mask

2010-11-29  Ernesto Baschny  <ernst@cron-it.de>

	* Follow-up to #15998: Fixed CGL issue with naming and added exception codes

2010-11-29  Francois Suter  <francois@typo3.org>

	* Fixed bug #16583: Localization overview has no color-coded status anymore

2010-11-29  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Added last_synched_target file since the system extension "version" is now maintained in an external repository
	  (see https://svn.typo3.org/TYPO3v4/CoreProjects/workspaces/version/)
